Applied min-width to qset rollback bar to prevent wonky overflow

--- a/src/css/widget-create.scss
+++ b/src/css/widget-create.scss
@@ -66,6 +66,7 @@ a {
 	z-index: 5;
 	height: 52px;
 	width: 100%;
+	min-width: 1080px;
 	text-align: left;
 	white-space: nowrap;
 
